--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         based in Buenos Aires.<br />
         I'm passionate about science, art and technology, self-taught and
         curious for validate knowledge<br />
-        I play drums and practice martial arts and always i looking for new
+        I play drums and practice martial arts and always looking for new
         challenges for expand my mind
       </p>
       <div class="contact">
