change text :sparkles:

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         Hello visitor, my name is Santiago Migueles, a creative coding developer
         based in Buenos Aires.<br />
         I'm passionate about science, art and technology, self-taught and
-        curious for validate knowledge<br />
+        curious for validate knowledge.<br />
         I play drums and practice martial arts and always looking for new
-        challenges for expand my mind
+        challenges for expand my mind.
       </p>
       <div class="contact">
         <a href="https://github.com/santimigueles" target="_blank" class="button">
